Cleaned up some old code.

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -67,7 +67,7 @@
 <main class="container">
  <div class="bg-light p-5 rounded">
    <h1>Definition</h1>
-   <p class="lead">Use this part of the page to present your results from the API call.</p>
+   <p class="lead">Clyde, baby, use this part of the page to show your results from the API call.</p>
    <ul class="list-unstyled">
        <li>This is a list. Your word could go here.</li>
        <li>It appears completely unstyled.</li>
