--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -14,9 +14,7 @@
  
    <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Microbe&display=swap" rel="stylesheet">
+
 <!-- Favicons -->
 <meta name="theme-color" content="#7952b3">
  
@@ -59,8 +57,9 @@
          <a class="nav-link" href="https://dictionaryapi.dev">Our API</a>
        </li>
      </ul>
+    
      <form class="d-flex" id="defineform">
-       <input id="defineword" class="form-control me-2" type="search" name="defineword" placeholder="What word?" aria-label="Search">
+    <input class="form-control me-2" type="search" name="defineword" placeholder="What word?" aria-label="Search">
        <button class="btn btn-outline-success" type="submit">Define</button>
      </form>
    </div>
