Commiting before revert.

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -73,7 +73,7 @@
    <p class="lead">Clyde, baby, use this part of the page to show your results from the API call.</p>
    <ul class="list-unstyled">
 
-    <!-- <li><b><u>{def.word}</u></b></li>
+    <li><b><u>{def.word}</u></b></li>
     <li>Phonetic: {def.phonetics[0].text}</li>
     <li><i>{def.meanings[0].partOfSpeech}</i></li>
       <ol>
@@ -81,7 +81,7 @@
         {/* <li>{def.meanings[0].definitions[1].definition}</li> */}
       </ol>
       <li>Antonym(s): {def.meanings[0].antonyms}</li>
-    <li>Synonym(s): {def.meanings[0].synonyms[0]}</li> -->
+    <li>Synonym(s): {def.meanings[0].synonyms[0]}</li>
 
        <li>This is a list. Your word could go here.</li>
        <li>It appears completely unstyled.</li>
